--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "clsx": "^2.0.0",
     "lucide-react": "^0.279.0",
     "next": "latest",
+    "prisma": "^5.3.1",
     "react": "latest",
     "react-dom": "latest",
     "tailwind-merge": "^1.14.0",
