--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.7.17",
+    "@hookform/resolvers": "^3.3.1",
     "@prisma/client": "^5.3.1",
     "@radix-ui/react-alert-dialog": "^1.0.5",
+    "@radix-ui/react-form": "^0.0.3",
     "@radix-ui/react-navigation-menu": "^1.1.4",
     "@radix-ui/react-scroll-area": "^1.0.5",
     "@radix-ui/react-separator": "^1.0.3",
@@ -22,18 +24,24 @@
     "clsx": "^2.0.0",
     "date-fns": "^2.30.0",
     "lucide-react": "^0.279.0",
+    "moment": "^2.29.4",
     "next": "latest",
     "react": "latest",
+    "react-datepicker": "^4.18.0",
     "react-dom": "latest",
     "tailwind-merge": "^1.14.0",
     "tailwindcss-animate": "^1.0.7",
-    "tailwindcss-radix": "^2.8.0"
+    "tailwindcss-radix": "^2.8.0",
+    "validator": "^13.11.0",
+    "zod": "^3.22.2"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.10",
     "@types/node": "^20.8.0",
     "@types/react": "latest",
+    "@types/react-datepicker": "^4.15.1",
     "@types/react-dom": "latest",
+    "@types/validator": "^13.11.2",
     "autoprefixer": "latest",
     "daisyui": "^3.8.2",
     "eslint": "latest",
