--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "@headlessui/react": "^1.7.17",
     "@hookform/resolvers": "^3.3.1",
-    "@prisma/client": "^5.3.1",
+    "@prisma/client": "^5.4.1",
     "@radix-ui/react-alert-dialog": "^1.0.5",
     "@radix-ui/react-form": "^0.0.3",
     "@radix-ui/react-navigation-menu": "^1.1.4",
@@ -26,6 +26,7 @@
     "lucide-react": "^0.279.0",
     "moment": "^2.29.4",
     "next": "latest",
+    "next-auth": "^4.23.2",
     "react": "latest",
     "react-datepicker": "^4.18.0",
     "react-dom": "latest",
