--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@auth/prisma-adapter": "^1.0.3",
     "@headlessui/react": "^1.7.17",
     "@hookform/resolvers": "^3.3.1",
+    "@mapbox/node-pre-gyp": "^1.0.11",
     "@prisma/client": "^5.4.1",
     "@radix-ui/react-alert-dialog": "^1.0.5",
     "@radix-ui/react-form": "^0.0.3",
@@ -20,7 +21,6 @@
     "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/themes": "^1.1.2",
-    "@types/bcrypt": "^5.0.0",
     "axios": "^1.5.1",
     "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.0",
@@ -41,6 +41,7 @@
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.10",
+    "@types/bcrypt": "^5.0.0",
     "@types/node": "^20.8.0",
     "@types/react": "latest",
     "@types/react-datepicker": "^4.15.1",
